--- a/index.html
+++ b/index.html
@@ -485,6 +485,8 @@
                                         - Centered composition with character taking up most of the frame
                                         - High detail and clarity
                                         - NO TEXT, NO WORDS, NO TYPOGRAPHY anywhere in the image
+                                        - Sticker sizes is 370 x 320 pixels in PNG format and Image backgrounds must be transparent
+                                        - There should be a margin of around 10 pixels between the trimmed image and the content around it
                                         
                                         The final result should look like a professional photo sticker with realistic rendering.`;
 
